File changes, general progress
Changed file indentations, moved SASS folder, updated SASS structure.
Added Gulp build system.

--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
 		<meta name="author" content="Davis Miculis" />
 
 		<!-- CSS Main -->
-		<link rel="stylesheet" type="text/css" href="css/main.css" />
+		<link rel="stylesheet" type="text/css" href="css/main.min.css" />
 	</head>
 
 	<body>
@@ -34,6 +34,6 @@
 		<div class="control-right" id="control-right"></div>
 
 		<!-- JS Main -->
-		<script type="text/javascript" src="js/main.js"></script>
+		<script type="text/javascript" src="js/main.min.js"></script>
 	</body>
 </html>
