--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,12 @@
 
 		<div class="fullscreen background"></div>
 
+		<video class="fullscreen video" poster="img/flight.jpg" loop="loop" autoplay muted>
+			<source src="img/flight.webm" type="video/webm">
+			<source src="img/flight.mp4" type="video/mp4">
+			Your browser does not support video.
+		</video>
+
 		<div class="fullscreen overlay"></div>
 
 		<div class="fullscreen compass"></div>
